src/app/app.component.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* General styles */
.content-container, .mobile-container {
  display: flex;
  justify-content: center; /* Horizontally center the content */
  align-items: center; /* Vertically center the content */
  width: 100%;
  overflow: hidden;
}

/* Desktop-specific styles */
.content-container {
  position: fixed;
  height: 150vh;
}

.cover-text-container {
  position: absolute;
  width: 100%;
  height: 100%;
  display: flex;
  z-index: 1; 
  pointer-events: none;
  margin-top: 6%;
  margin-left: 25%;
}

.background-image {
  position: relative;
  width: 100%;
  height: 100%;
  top: -10vh; /* Move the image upwards */
  z-index: -1;
  background-color: black;
  background-size: cover;
  background-position: center;
}

::ng-deep .text {
  text-align: left;
  color: rgb(60, 158, 73);
  font-family: Tahoma, wcp;
  font-size: 120%;
  width: 80%;
}

.text-container {
  position: fixed;
  width: 100%;
  height: 90vh;
  margin-top: 2%;
  padding-left: 3.5%;
  overflow-y: scroll;
  max-height: fit-content;
}

.text-container li{
  list-style: none;
  padding-top: 2%;
}

.text-container li span{
  width: 60%;
  white-space: pre-wrap;
}

input {
  background-color: transparent;
  border-color: transparent;
}

:-ms-input-placeholder {
  color: rgb(60, 158, 73);
  opacity: 90%;
}

::-webkit-input-placeholder {
  color: rgb(60, 158, 73);
  opacity: 90%;
}

::ng-deep .spanImage {
  height: 40px;
  width: 40px;
}

/* Mobile-specific styles */
.mobile-container {
  position: fixed;
  height: 100vh;
  width: 100%;
  overflow: auto;
}

.mobile-background-image {
  position: relative;
  width: 100%;
  height: 100%;
  z-index: -1;
  top: -3vh;
  background-color: white;
  object-fit: cover;
}

.mobile-cover-text-container {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  z-index: 0; 
  pointer-events: none;
  margin-top: 35%;
  margin-left: 15%;
}

.mobile-text-container {
  position: fixed;
  width: 100%;
  height: 65vh;
  margin-top: 2%;
  padding-left: 3.5%;
  overflow: scroll;
  max-height: fit-content;
}

.mobile-text-container li{
  list-style: none;
  padding-top: 10%;
}

.mobile-text-container li span{
  width: 60%;
  white-space: pre-wrap;
}

::ng-deep .mobile-text {
  text-align: left;
  color: rgb(60, 158, 73);
  font-family: Tahoma, wcp;
  font-size: 100%;
  width: 80%;
}

